<resources>
    <string name="app_name">Welsh Pharmacy</string>
    <!-- define all pharmacy services names here -->
    <string name="FLU_SHOT">Flu shot</string>
    <string name="BLOOD_PRESSURE_MONITORING">Blood pressure monitoring</string>
    <string name="DISPENSING">Dispensing</string>
    <string name="ALCOHOL_ADVICE">Alcohol Advice</string>
    <string name="EMERGENCY_SUPPLY">Emergency Supply</string>
    <string name="MEDICINE_REVIEW">Medicine Review</string>
    <string name="MINOR_AILMENT">Minor Ailment Treatment</string>
    <string name="NEW_MEDICINE">New Medicine</string>
    <string name="PREGNANCY_TEST">Pregnancy Test</string>
    <string name="WEIGHT_MANAGEMENT">Weight Management</string>

    <string name="save_settings">Save settings</string>
    <string name="saved_message">Your settings have been saved</string>
    <string name="reset_text">Settings have been reset</string>
    <string name="title_activity_pharmacy_list">Nearby Pharmacies</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="map_view">Map view</string>
    <string name="list_view">List view</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">"Open until "</string>
    <string name="closed">Closed</string>
    <string name="current_postcode">Enter current postcode</string>
    <string name="maximum_distance_to_travel">Set maximum travel distance (miles)</string>
    <string name="settings">Settings</string>
    <string name="address">Address: %1$s</string>
    <string name="opening_closing_time">Open from  %1$s to %2$s</string>
    <string name="default_postcode_fallback">Cannot use location - falling back to default postcode</string>
    <string name="default_nopostcode_fallback">Cannot fallback to default postcode - either grant location permission or set default postcode</string>
    <string name="have_location_permission">Have location permission</string>
    <string name="location_not_found">Cannot find location</string>
    <string name="cannot_resolve_postcode">Cannot resolve default postcode - perhaps network is down?</string>
    <string name="only_show_pharmacies_that_have_blood_pressure_monitoring">Blood pressure monitoring</string>
    <string name="filter">Filter</string>
    <string name="filter_settings">Filter settings</string>
    <string name="filters">Filters</string>
    <string name="require_services">Require the following services</string>
    <string name="require_services_welsh">Require the following services in Welsh</string>
    <string name="location_filters">Location filters</string>
    <string name="services_filters">Services filters</string>
    <string name="maximum_distance_miles">Maximum distance (miles)</string>
    <string name="hint_enter_the_maximum_distance_in_miles">Max distance(miles)</string>
    <string name="use_my_location">Use my location</string>
    <string name="use_postcode">Use postcode:</string>
    <string name="hint_text">XXYY YYYY</string>
    <string name="cannot_locate_addr_not_filtering">Cannot locate address - not filtering by location</string>
    <string name="not_filtering_location_not_given">Not filtering by location - no location given</string>
    <string name="services_offered_in_english">Services offered in English</string>
    <string name="services_offered_in_welsh">Services offered in Welsh</string>
    <string name="MONDAY">Monday</string>
    <string name="TUESDAY">Tuesday</string>
    <string name="WEDNESDAY">Wednesday</string>
    <string name="THURSDAY">Thursday</string>
    <string name="FRIDAY">Friday</string>
    <string name="SATURDAY">Saturday</string>
    <string name="SUNDAY">Sunday</string>
    <string name="opening_times">Opening Times</string>
    <string name="liked">Liked</string>
    <string name="disliked">Disliked</string>
    <string name="application_setup">Application setup</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="enter_postcode">Enter postcode</string>
    <string name="use_location_if_available">Use my location if available</string>
    <string name="finish">Finish</string>
    <string name="postcode_not_found_not_saved">Post code cannot be found - changes not saved</string>
    <string name="please_connect_internet_outdated">Your information is outdated - please connect to the internet</string>
    <string name="please_connect_internet_broken">Cannot access cache - please connect to the internet</string>
    <string name="refresh">Refresh</string>
    <string name="changes_not_saved_invalid_distance">Invalid distance - changes not saved</string>
    <string name="welsh" translatable="false">Cymraeg</string>
    <string name="english" translatable="false">English</string>
    <string name="other_pharmacy_details">Other Pharmacy Details</string>
    <string name="url">Url</string>
    <string name="website">Visit Website</string>
    <string name="call_now">Call Now</string>
    <string name="map_now">Directions</string>
    <string name="no_results">No Results found</string>
    <string name="location">Location</string>
    <string name="BLOOD_PRESSURE_MONITORING_WELSH">Blood pressure monitoring</string>
    <string name="FLU_SHOT_WELSH">Flu shot</string>
    <string name="language">Language/Laith</string>
    <string name="are_you_sure_exit">Are you sure you want to exit?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
</resources>
