<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welsh_services_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/app_setup_title_welsh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/application_setup"
        android:textSize="@dimen/title_text_size" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/services_required_title_welsh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/require_services_welsh"
        app:layout_constraintTop_toBottomOf="@id/app_setup_title_welsh" />

    <ScrollView
        tools:layout_editor_absoluteX="0dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="68dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/services_required_title_welsh">

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/services_required_welsh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >

        </android.support.v7.widget.LinearLayoutCompat>
    </ScrollView>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/show_location_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/show_english_services"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="20dp"
        android:text="@string/prev"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/show_location_options" />
</android.support.constraint.ConstraintLayout>