<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="25dp"
    android:orientation="vertical"
    tools:context="com.nsa.clientproject.welshpharmacy.DefaultSettings">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/services_settings">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/app_setup_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/application_setup"
            android:textSize="@dimen/title_text_size" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/services_required_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/require_services"
            app:layout_constraintTop_toBottomOf="@id/app_setup_title" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="68dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/services_required_title"
            tools:layout_editor_absoluteX="0dp">

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/services_required"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                >

            </android.support.v7.widget.LinearLayoutCompat>
        </ScrollView>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/show_welsh_services"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <!-- Welsh services here -->
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/welsh_services_settings"
        android:layout_height="match_parent">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/app_setup_title_welsh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/application_setup"
            android:textSize="@dimen/title_text_size" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/services_required_title_welsh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/require_services_welsh"
            app:layout_constraintTop_toBottomOf="@id/app_setup_title_welsh" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="68dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/services_required_title_welsh"
            tools:layout_editor_absoluteX="0dp">

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/services_required_welsh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                >

            </android.support.v7.widget.LinearLayoutCompat>
        </ScrollView>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/show_location_options"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prev"
            android:id="@+id/show_english_services"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/show_location_options"
            android:paddingEnd="20dp"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/location_settings">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/app_setup_title_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/application_setup"
            android:textSize="@dimen/title_text_size" />

        <TextView
            android:id="@+id/postcode_input_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="56dp"
            android:text="@string/enter_postcode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_setup_title_location" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:id="@+id/postcode_given"
            android:layout_marginTop="36dp"
            android:hint="@string/current_postcode"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_setup_title_location" />

        <TextView
            android:id="@+id/maximum_distance_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="56dp"
            android:text="@string/hint_enter_the_maximum_distance_in_miles"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postcode_input_text" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:inputType="number|numberDecimal"
            android:id="@+id/maximum_distance"
            android:layout_marginTop="36dp"
            android:hint="@string/hint_enter_the_maximum_distance_in_miles"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/postcode_input_text" />


        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/maximum_distance_input"
            android:id="@+id/use_location"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/use_location_if_available"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/show_welsh_services_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:text="@string/prev"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/finish" />
    </android.support.constraint.ConstraintLayout>
</LinearLayout>


