<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/services_settings">
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/app_setup_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/application_setup"
            android:textSize="@dimen/title_text_size" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/services_required_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/require_services"
            app:layout_constraintTop_toBottomOf="@id/app_setup_title" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="68dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/services_required_title">

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/services_required"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </android.support.v7.widget.LinearLayoutCompat>
        </ScrollView>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/show_welsh_services"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>